# yaft

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
deploy/: finance-app.service  install.sh  yaft.service
docs/: operations.md
docs/design/: DESIGN.md  home.html  secondary-screens.html  tabs.html
src/finance_app/: app.py  config.py  logging_setup.py
src/finance_app/analysis/: forecast.py  monthly.py  qa_sql_tool.py  weekly.py
src/finance_app/api/: auth.py
src/finance_app/bot/: edit_card.py  parser_text.py
src/finance_app/db/: __init__.py  models.py  session.py
src/finance_app/domain/: budgets.py  fx.py  goals.py  (+2 more)
src/yaft/: app.py  config.py
tests/: conftest.py
tests/integration/: test_api_accounts_categories.py  test_api_budgets.py  test_api_goals_recurring.py  test_api_settings.py  test_api_summary.py  test_api_transactions.py  test_ask.py  test_backup.py  test_callbacks.py  test_commands.py  test_monthly_summary.py  test_pragmas_on_startup.py  test_scheduler_jobs.py  test_text_handler.py  test_voice_handler.py  test_weekly_coach.py
tests/unit/: test_auth.py  test_budgets.py  test_config.py  test_edit_card.py  test_forecast.py  test_fx.py  test_goals.py  test_init_data.py  test_models.py  test_money.py  test_openrouter.py  test_openrouter_qa.py  test_parsed_schema.py  test_parser_text.py  test_qa_sql_tool.py  test_record.py  test_resolver.py  test_rrule.py
webapp/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  index.css  main.tsx
(+77 files in other folders)
