[project]
name = "finance-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "aiogram>=3.13",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "httpx>=0.27",
  "python-dateutil>=2.9",
  "tzdata>=2024.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.115",
  "jsonschema>=4.23",
  "ruff>=0.7",
  "mypy>=1.13",
  "freezegun>=1.5",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/finance_app/db/migrations/versions/*.py" = ["E501"]
"src/finance_app/bot/edit_card.py" = ["RUF001"]
"src/finance_app/bot/handlers/commands.py" = ["RUF001"]
"tests/unit/test_edit_card.py" = ["RUF001"]
